--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,8 @@ header {
   .footer ol {
     list-style: none;
     display: flex; }
+    .footer ol li h5 {
+      margin: 0; }
     .footer ol li a {
       color: #000;
       text-decoration: none;
@@ -346,7 +348,6 @@ header {
     padding: 0.5rem; }
   .mainProducto .sectionProducto {
     width: 100%;
-    max-height: 300px;
     padding: 1.5rem;
     background-color: #02AFFE;
     display: flex;
@@ -365,65 +366,80 @@ header {
       color: white;
       bottom: 0.5rem;
       padding: 0rem; }
-  .mainProducto .targetasPrecioContainer {
+  .mainProducto .targetaPrecioContainer {
+    margin-top: 0.3rem;
     background-color: lightcoral; }
-    .mainProducto .targetasPrecioContainer .targetaPrecio {
-      background-color: lightcoral;
-      flex-direction: row;
-      align-items: center;
-      width: 100%;
-      padding: 1rem; }
-      .mainProducto .targetasPrecioContainer .targetaPrecio .textoPrecio {
-        width: 100%;
+    .mainProducto .targetaPrecioContainer .targetaPrecio {
+      padding: 0 1rem; }
+      .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio {
         display: flex;
         flex-direction: column;
         width: auto;
         text-align: justify;
-        align-items: center;
-        padding-top: 4rem; }
-        .mainProducto .targetasPrecioContainer .targetaPrecio .textoPrecio h1 {
+        align-items: center; }
+        .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio h1 {
           padding: 0;
           margin: 0; }
-        .mainProducto .targetasPrecioContainer .targetaPrecio .textoPrecio h2 {
+        .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio h2 {
           padding: 1rem 0 0 0; }
-        .mainProducto .targetasPrecioContainer .targetaPrecio .textoPrecio p {
+        .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio p {
           padding: 1rem 0 0 0;
           margin: 0; }
-    .mainProducto .targetasPrecioContainer .carruselPrecio {
-      width: 100%;
-      padding: 1rem; }
-  .mainProducto .targetasProductos {
-    width: 100%; }
-    .mainProducto .targetasProductos .targetaProducto h4 {
-      font-size: 1rem; }
-    .mainProducto .targetasProductos .targetaProducto img {
-      width: 70%; }
+    .mainProducto .targetaPrecioContainer .carruselPrecio {
+      max-width: 350px;
+      width: 100%; }
+  .mainProducto .targetasProductosGrid {
+    justify-items: center;
+    width: 100%;
+    padding: 1rem;
+    gap: 1rem;
+    flex-wrap: wrap; }
+    .mainProducto .targetasProductosGrid .card-body {
+      color: #000; }
+      .mainProducto .targetasProductosGrid .card-body p, .mainProducto .targetasProductosGrid .card-body h5 {
+        text-align: start; }
+
+@media (min-width: 992px) {
+  .targetasProductosGrid {
+    display: grid !important;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto; } }
 
 @media (max-width: 992px) {
   .container {
     display: flex;
     grid-template-columns: 2fr;
     max-height: none; }
-  .targetasPrecioContainer {
+  .targetaPrecioContainer {
     display: flex;
     flex-direction: column; }
-    .targetasPrecioContainer .targetaPrecio {
+    .targetaPrecioContainer .targetaPrecio {
       width: 100%;
       display: flex;
-      background-color: black !important; } }
+      background-color: black !important; }
+  .targetasProductosGrid {
+    display: flex;
+    max-height: none; }
+  .carruselPrecio {
+    max-width: none !important; } }
 
 @media (max-width: 768px) {
   .container {
     display: flex;
     grid-template-columns: 1fr;
     max-height: none; }
-  .targetasPrecioContainer {
+  .targetaPrecioContainer {
     display: flex;
     flex-direction: column; }
-    .targetasPrecioContainer .targetaPrecio {
+    .targetaPrecioContainer .targetaPrecio {
       width: 100%;
       display: flex;
-      background-color: black !important; } }
+      background-color: black !important; }
+  .targetasProductosGrid {
+    display: flex;
+    max-height: none; }
+  .carruselPrecio {
+    max-width: none !important; } }
 
 @media (max-width: 700px) {
   .container {
@@ -434,19 +450,24 @@ header {
     padding: 1rem;
     justify-content: space-evenly;
     margin-bottom: 0.3rem; }
-  .targetasPrecioContainer {
+  .targetaPrecioContainer {
     display: flex;
     flex-direction: column; }
-    .targetasPrecioContainer .targetaPrecio {
+    .targetaPrecioContainer .targetaPrecio {
       width: 100%;
       display: flex;
-      background-color: green !important; } }
+      background-color: green !important; }
+  .targetasProductosGrid {
+    display: flex;
+    max-height: none; }
+  .carruselPrecio {
+    max-width: none !important; } }
 
 @media (max-width: 576px) {
-  .targetasPrecioContainer {
+  .targetaPrecioContainer {
     display: flex;
     flex-direction: column; }
-    .targetasPrecioContainer .targetaPrecio {
+    .targetaPrecioContainer .targetaPrecio {
       width: 100%;
       display: flex;
       background-color: #ddb6f1 !important; }
@@ -472,4 +493,9 @@ header {
     border-right: none;
     padding: 1rem; }
   .header nav {
-    padding-right: 0px; } }
+    padding-right: 0px; }
+  .targetasProductosGrid {
+    display: flex;
+    max-height: none; }
+  .carruselPrecio {
+    max-width: none !important; } }
