--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -15,6 +15,9 @@
         list-style: none;
         display: flex;
         li{
+            h5{
+                margin: 0;
+            }
             a {
                 color: $colorNegro;
                 text-decoration: none;
