--- a/scss/main.scss
+++ b/scss/main.scss
@@ -159,6 +159,15 @@ $textoFiltros:(
 @import "mainProducto";
 
 
+@media (min-width:992px){
+
+    .targetasProductosGrid{
+        display: grid !important;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+    }
+
+}
 
 @media (max-width:992px) {
 
@@ -168,7 +177,7 @@ $textoFiltros:(
         max-height: none;
     }
 
-    .targetasPrecioContainer{
+    .targetaPrecioContainer{
         display: flex;
         flex-direction: column;
         .targetaPrecio{
@@ -176,6 +185,15 @@ $textoFiltros:(
             display: flex;
             background-color: black !important;
         }
+    }
+
+    .targetasProductosGrid{
+        display: flex;
+        max-height: none;
+    }
+
+    .carruselPrecio {
+        max-width: none !important;
     }
 }
 
@@ -187,7 +205,7 @@ $textoFiltros:(
         max-height: none;
     }
 
-    .targetasPrecioContainer{
+    .targetaPrecioContainer{
         display: flex;
         flex-direction: column;
         .targetaPrecio{
@@ -195,6 +213,15 @@ $textoFiltros:(
             display: flex;
             background-color: black !important;
         }
+    }
+
+    .targetasProductosGrid{
+        display: flex;
+        max-height: none;
+    }
+
+    .carruselPrecio {
+        max-width: none !important;
     }
 }
 
@@ -213,7 +240,7 @@ $textoFiltros:(
         margin-bottom: 0.3rem;
     }
 
-    .targetasPrecioContainer{
+    .targetaPrecioContainer{
         display: flex;
         flex-direction: column;
         .targetaPrecio{
@@ -223,12 +250,20 @@ $textoFiltros:(
         }
     }
 
+    .targetasProductosGrid{
+        display: flex;
+        max-height: none;
+    }
+
+    .carruselPrecio {
+        max-width: none !important;
+    }
 }
 
 // carruselcontainer
 @media(max-width:576px) {
 
-    .targetasPrecioContainer{
+    .targetaPrecioContainer{
         display: flex;
         flex-direction: column;
         .targetaPrecio{
@@ -273,6 +308,15 @@ $textoFiltros:(
 
     .header nav {
         padding-right: 0px;
+    }
+
+    .targetasProductosGrid{
+        display: flex;
+        max-height: none;
+    }
+    
+    .carruselPrecio {
+        max-width: none !important;
     }
 }
 
