--- a/scss/main.css
+++ b/scss/main.css
@@ -95,14 +95,11 @@
   text-align: center;
   font-size: 0.75rem;
 }
+.main .main__index .filtros .btnPrincipal {
+  font-weight: normal;
+}
 .main .main__index .filtros h5 {
   font-size: 1rem;
-}
-.main .main__index .filtros .filtro_1 {
-  padding: 0.2rem;
-}
-.main .main__index .filtros .filtro_2 {
-  padding: 0.2rem;
 }
 .main .main__index .section_container {
   display: flex;
@@ -205,28 +202,29 @@ header .navbar .container-fluid .logo {
   grid-area: footer;
   background-color: #ffffff;
   /* font-style: italic; */
-  border-top: solid 2px #000;
+  border-top: solid 1px #000;
   margin-top: 0.3rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  gap: 2rem;
+  padding: 1rem 1rem 0 1rem;
+  gap: 1.5rem;
   font-size: 20px;
-  justify-content: center;
+  justify-content: space-around;
 }
 .footer ol {
   list-style: none;
   display: flex;
+  margin-bottom: 0 !important;
 }
 .footer ol li h5 {
-  margin: 0;
+  margin: 0 !important;
 }
 .footer ol li a {
   color: #000;
   text-decoration: none;
   padding: 1rem;
-  border-right: 1px solid #000;
+}
+.footer h6 {
+  text-align: center;
 }
 
 .main__registro .formularios {
@@ -286,26 +284,27 @@ header .navbar .container-fluid .logo {
   margin-top: 0.3rem;
   text-align: justify;
   align-items: center;
+  padding: 1rem;
 }
 .main .mainContacto .textoContacto {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   max-width: 37.5rem;
+}
+.main .mainContacto .textoContacto .tituloPrincipal {
+  text-align: center;
 }
 .main .mainContacto .carruselesContacto {
   justify-content: center;
   width: 100%;
-  max-width: 27.5em;
-  padding: 1rem 0rem 1rem 0rem;
-  margin: 1rem;
-  padding: 1rem;
+  max-width: 37.5em;
 }
 .main .mainContacto .ubicacionContainer {
   margin-bottom: 1rem;
-  width: 70%;
-  max-width: 30.5em;
+  width: 100%;
+  max-width: 37.5em;
 }
 .main .mainContacto .ubicacionContainer .ubicacion {
   width: 100%;
@@ -319,6 +318,7 @@ header .navbar .container-fluid .logo {
   color: #ffffff;
 }
 .main .mainContacto .ubicacionContainer .ubicacion .ubicacionTexto h2 {
+  padding-top: 1rem;
   font-weight: 500;
   color: #ffffff;
 }
@@ -439,8 +439,9 @@ header .navbar .container-fluid .logo {
   padding: 0rem;
 }
 .mainProducto .targetaPrecioContainer {
+  color: #000;
   margin-top: 0.3rem;
-  background-color: lightcoral;
+  background-color: #E0E0E0;
 }
 .mainProducto .targetaPrecioContainer .targetaPrecio {
   padding: 0 1rem;
@@ -453,18 +454,21 @@ header .navbar .container-fluid .logo {
   align-items: center;
 }
 .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio h1 {
+  color: #000 !important;
   padding: 0;
   margin: 0;
+  font-weight: 700;
+  font-size: 40px;
 }
 .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio h2 {
   padding: 1rem 0 0 0;
 }
 .mainProducto .targetaPrecioContainer .targetaPrecio .textoPrecio p {
-  padding: 1rem 0 0 0;
+  padding: 1rem 1rem;
   margin: 0;
 }
 .mainProducto .targetaPrecioContainer .carruselPrecio {
-  max-width: 350px;
+  max-width: 380px;
   width: 100%;
 }
 .mainProducto .targetasProductosGrid {
@@ -501,7 +505,7 @@ header .navbar .container-fluid .logo {
   .targetaPrecioContainer .targetaPrecio {
     width: 100%;
     display: flex;
-    background-color: black !important;
+    background-color: #E0E0E0 !important;
   }
   .targetasProductosGrid {
     display: flex;
@@ -524,7 +528,7 @@ header .navbar .container-fluid .logo {
   .targetaPrecioContainer .targetaPrecio {
     width: 100%;
     display: flex;
-    background-color: black !important;
+    background-color: #E0E0E0 !important;
   }
   .targetasProductosGrid {
     display: flex;
@@ -532,6 +536,12 @@ header .navbar .container-fluid .logo {
   }
   .carruselPrecio {
     max-width: none !important;
+  }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
 }
 @media (max-width: 700px) {
@@ -552,7 +562,7 @@ header .navbar .container-fluid .logo {
   .targetaPrecioContainer .targetaPrecio {
     width: 100%;
     display: flex;
-    background-color: green !important;
+    background-color: #E0E0E0 !important;
   }
   .targetasProductosGrid {
     display: flex;
@@ -570,7 +580,7 @@ header .navbar .container-fluid .logo {
   .targetaPrecioContainer .targetaPrecio {
     width: 100%;
     display: flex;
-    background-color: #ddb6f1 !important;
+    background-color: #E0E0E0 !important;
   }
   .section_container {
     flex-direction: column;
