--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,28 +2,29 @@
     grid-area: footer;
     background-color: $colorBlanco;
     /* font-style: italic; */
-    border-top: solid 2px #000;
+    border-top: solid 1px #000;
     margin-top: 0.3rem;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    gap: 2rem;
+    padding: 1rem 1rem 0 1rem;
+    gap: 1.5rem;
     font-size: 20px;
-    justify-content: center;
+    justify-content: space-around;
     ol {
         list-style: none;
         display: flex;
+        margin-bottom: 0 !important;
         li{
             h5{
-                margin: 0;
+            margin: 0 !important;
             }
             a {
                 color: $colorNegro;
                 text-decoration: none;
                 padding: 1rem;
-                border-right: 1px solid $colorNegro;
             }
         }
+    }
+    h6{
+        text-align: center;
     }
 }
