--- a/scss/_mainContacto.scss
+++ b/scss/_mainContacto.scss
@@ -16,6 +16,9 @@
             .tituloPrincipal{
                 text-align: center;
             }
+            p{
+                padding-top: 1rem;
+            }
         }
         .carruselesContacto{
             justify-content: center;
