--- a/scss/_mainProducto.scss
+++ b/scss/_mainProducto.scss
@@ -32,14 +32,10 @@
         align-items: center;
         border: solid #000 1px;
 
-        h3 {
-            padding: 1.5rem;
-            text-align: center;
-            color: $colorBlanco;
-        }
-
         p {
             text-align: justify;
+            padding: 0;
+            margin: 0;
         }
 
         a {
@@ -52,7 +48,10 @@
         margin-top: 0.3rem;
         background-color: #E0E0E0;
         .targetaPrecio {  
+            display: flex;
+            align-items: center;
             padding: 0 1rem;
+            font-weight: 300;
             .textoPrecio {
                 display: flex;
                 flex-direction: column;
@@ -60,18 +59,23 @@
                 text-align: justify;
                 align-items: center;
                 h1{
+                    font-family:'Courier New', Courier, monospace;
                     color: $colorNegro !important;
-                    padding: 0;
+                    padding: 1rem 1rem 0 0;
                     margin: 0;
-                    font-weight: 700;
+                    font-weight: 500;
                     font-size: 40px;
                 }
                 h2{
-                    padding: 1rem 0 0 0 ;
+                    background-color: $colorNaranjaGD;
+                    border-radius: 10px;
+                    padding: 0.2rem 0.5rem;
                 }
                 p{
-                    padding: 1rem 1rem;
+                    padding: 1rem 0rem;
                     margin: 0;
+                    color: $colorNegro;
+                    font-size: 20px;
                 }
             }
         }
