--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     gap:1.6rem;
     overflow: hidden;
+    margin-top: 1.5rem;
     .targeta {
         width: 100%;
         border-radius: 3px;
@@ -20,6 +21,7 @@
         padding: 0.5rem;
         max-width: 320px;
         img {
+            padding-top: 0.5rem;
             width: 15rem;
             height: auto;
             width: 100%;
