--- a/scss/_main_index.scss
+++ b/scss/_main_index.scss
@@ -29,9 +29,9 @@
         }
         .section_container {
             display: flex;
-            padding: 1rem;
+            flex-direction: column;
             justify-content: space-evenly;
-            margin-bottom: 0.3rem;
+            padding-bottom: 1.5rem;
         }
     }
 }
