--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -1,13 +1,13 @@
 .section{
-    width: 13.5rem;
-    padding: 1.5rem;
+    width: 100%;
+    padding: 0.5rem;
     background-color: $colorSecundario;
-    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 0.3rem;
     h3{
-        padding: 1.5rem;
+        padding: 0.5rem;
         text-align: center;
         color: $colorBlanco;
     }
